# backend/src/cct/resource_management/partner_management/models.py
@@ -10,6 +10,7 @@ from ..contracts import StrictProperties
 class OrganisationProperties(StrictProperties):
     name: str = Field(min_length=1, max_length=200)
     address_locality_name: str | None = Field(default=None, alias="addressLocalityName", min_length=1, max_length=100)
+    address_country_name: str | None = Field(default=None, alias="addressCountryName", min_length=1, max_length=100)
 
 
 class OrgaRolePropertiesBase(StrictProperties):
@@ -33,4 +34,3 @@ class AirlineRoleProperties(OrgaRolePropertiesBase):
 
 class EmptySupplierRoleProperties(OrgaRolePropertiesBase):
     pass
-
